# ppp-project-2

./: .flaskenv  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  app.db  app_run.py  config.py  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
.githooks/hooks/: pre-commit
.github/workflows/: pr_reminder.yml  run_tests.yml
app/: __init__.py  forms.py  models.py  routes.py
app/dash_assets/: typography.css
app/plotly_dash/: coingecko_data.py  dash_layout.html  dash_layout.py  dashboard.py  data.py
app/plotly_dash/data/: coingecko_coin_info.csv  coingecko_data.csv  coingecko_price_data.csv
app/templates/: 404.html  500.html  base.html  index.html  login.html  register.html  user.html  wip.html
migrations/versions/: 7ff222e91bc5_update_users_and_coin_table.py  82cb157dce31_users_table.py  a0a931abf0a1_init_tables_from_scratch.py  e64fd93bd625_.py
tests/: test_routes.py
