[tool.poetry]
name = "ppp-project-2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]  # Default dependency group
python = "==3.8.10"
Flask = "==2.0.3"
python-dotenv = "==0.19.2"
Flask-WTF = "==1.0.0"

[tool.poetry.dev-dependencies]
black = "==22.1.0"
flake8 = "==4.0.1"
pre-commit = "==2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
