[tool.poetry]
name = "ppp-project-2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]  # Default dependency group
python = "==3.8.10"
Flask = "==2.0.3"
numpy = "==1.22.2"
pandas = "==1.4.1"
dash = "==2.2.0"
python-dotenv = "==0.19.2"
Flask-WTF = "==1.0.0"
pytest = "==7.0.1"
Flask-Bootstrap = "==3.3.7"
Flask-SQLAlchemy = "==2.5.1"
Flask-Migrate = "==3.1.0"
pycoingecko = "==2.2.0"
Werkzeug = "==2.0.0" # required pin https://github.com/plotly/dash/issues/1992
PyMySQL = "==1.0.2"
cryptography = "==37.0.2"
Flask-Login = "^0.6.1"
email-validator = "^1.2.1"

[tool.poetry.dev-dependencies]
black = "==22.3.0"
flake8 = "==4.0.1"
pre-commit = "==2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
